2007-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (lastcit.game) : added
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.lastcit) : added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_lastcit)
	(R_igraph_measure_dynamics_lastcit_st, R_igraph_lastcit_game) : added

2007-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R 
	(mesasure.dynamics.citingcat.id.age, measure.dynamics.citedcat.id.age) :
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat_id_age)
	(R_igraph_measure_dynamics_citingcat_id_age) : 	standard deviation 
	calculation corrected 	

2007-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (alpha.centrality) : 
	added

	* interfaces/R/igraph/R/print.R (print.igraph) : better printing of 
	vertex and edge arguments 

	* interfaces/R/igraph/R/print.R (summary.igraph) : print attribute names

2007-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (transitivity) :
	call a special function if the local transitivity of all
	vertices requested
	* interface/R/src/rinterface.c 
	(R_igraph_transitivity_local_undirected_all) : added

2007-02-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : bug corrected

2007-02-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (graph.kcores) :
	renamed to graph.coreness
	* interfaces/R/src/rinterface.c (R_igraph_k_cores) :
	renamed to R_igraph_coreness

2007-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected loop drawing

	* interfaces/R/igraph/R/plot.common.R (i.get.edge.lty) : added
	* interfaces/R/igraph/R/plot.R (plot.igraph) : edge.lty argument
	added, edge.color and edge.width handled well even if loops edges
	are present
	* interfaces/R/igraph/R/tkplot.R (tkplot) : edge.lty argument
	added
	